--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -6,5 +6,5 @@ body:
     attributes:
       label: "Describe the bug"
       description: "A clear and concise description of what the bug is and how to reproduce it"
-    validation:
+    validations:
       required: true
