--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -8,3 +8,20 @@ body:
       description: "A clear and concise description of what the bug is and how to reproduce it"
     validations:
       required: true
+  - type: textarea
+    attributes:
+      label: "Environment"
+      description: "Environment that the bug appears"
+      value: |
+        ex:
+        **Browser:** Firefox
+        **OS:** Ubuntu 20.04
+        **Node Version:** v16.13.0
+        _etc..._
+    validations:
+      required: true
+  - type: textarea
+    attributes:
+      label: "Output"
+      description: "Some terminal/console error output if applicable (the text will auto-render to bash code-block)"
+      render: bash
