--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -14,10 +14,11 @@ body:
       description: "Environment that the bug appears"
       value: |
         ex:
-        **Browser:** Firefox
-        **OS:** Ubuntu 20.04
-        **Node Version:** v16.13.0
-        _etc..._
+        Browser: Firefox
+        OS: Ubuntu 20.04
+        Node Version: v16.13.0
+        
+        etc...
     validations:
       required: true
   - type: textarea
