--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -13,11 +13,9 @@ body:
       label: "Environment"
       description: "Environment that the bug appears"
       value: |
-        ex:
-        Browser: Firefox
-        OS: Ubuntu 20.04
-        Node Version: v16.13.0
-        
+        **Browser:** Firefox
+        **OS:** Ubuntu 20.04
+        **Node Version:** v16.13.0
         etc...
     validations:
       required: true
